# slam_practice

ch2/: helloSLAM.cpp
ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp
ch3/useGeometry/: CMakeLists.txt  useGeometry  useGeometry.cpp
ch4/useSophus/: CMakeLists.txt  useSophus.cpp
